--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href="#pd">产品介绍</a></li>
                 <li><a href="#contact">联系我们</a></li>
                 <li><a href="#blog">博客</a></li>
-                <li><a href="https://perfxlab.com" target="_blank">En</a></li>
+                <li><a href="http://perfxlab.com" target="_blank">En</a></li>
                 
             </ul>
             <span class="nav_btn"><img src="images/nav_btn.png" alt=""></span>
