--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                                 性能强大，采用六核64位ARM处理器以及ARM Mali-T860四核GPU，满足深度学习Inference阶段的需求<br />
                                 开发简单，PerfBOX预装本公司开发的嵌入式深度学习框架InferXLite，可部署深度学习应用<br />
                                 CPU+GPU处理器研发的高性能深度学习算法库PerfDNN_CL(支持fp16)，可充分发挥硬件平台的计算能力<br />
-                                支持场景多样化，支持Android和Unbuntu双系统，满足不同场景需求<br />
+                                支持场景多样化，支持Android和Ubuntu双系统，满足不同场景需求<br />
                                 丰富的外部接口，提供了DP1.2、PCIe M.2、USB3.0 、Type-C、千兆以太网、HDMI视频接口等丰富的外部接口，以便用户拓展。  
                             </div>           
                         </div>
