Add baidu tongji.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!-- windows phone 点击无高光 -->
 	<meta name="msapplication-tap-highlight" content="no">
-    <title>PerfXLab</title>
+
+
+    <meta name="description" content="澎峰科技,Perf-V,PerfXLab,嵌入式AI">
+    <meta name="keywords" content="澎峰科技,Perf-V,PerfXLab,嵌入式AI">
+    <meta name="author" content="">
+    <base href="http://perfxlab.com/cn/">
+    <title>PerfXLab 澎峰科技</title>
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
@@ -31,6 +37,18 @@
     <![endif]-->     
 </head>
 <body>
+
+  <!-- for baidu tongji -->
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?90fa6c25d43d6aa8d1925b386a52172d";
+  var s = document.getElementsByTagName("script")[0];
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
     <div class="nav" >
         <div class="ma clearfix">       
             <a href="###" class="logo">
